<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>ai.kognition.pilecv4j</groupId>
  <artifactId>s8</artifactId>
  <version>1.0-SNAPSHOT</version>
  <packaging>jar</packaging>
  <name>s8 application library</name>
  
  <properties>
    <!-- <downloadBinaries>true</downloadBinaries> -->
    <build.type>debug</build.type>
    <!-- This property is looked up using 'grep' from the script convert.sh -->
    <opencv.version>3.4.3-cuda9.2</opencv.version>
    <slf4j.version>1.7.16</slf4j.version>

    <!-- generator and platform.options are set in the profile -->
    <cmake.generator>${generator}</cmake.generator>
    
    <dempsy-commons.version>2.2.0-SNAPSHOT</dempsy-commons.version>
  </properties>
  
  <!-- Make sure all versions are listed in the dependencyManagement section -->
  <!-- It is WRONG to have ANY version numbers in pom.xml files below the product level
       (with the exception of the parent tag) -->
  <dependencyManagement>
    <dependencies>
      <!-- dempsy-commons bom pom import -->
      <dependency>
        <groupId>net.dempsy</groupId>
        <artifactId>dempsy-commons-bom</artifactId>
        <version>${dempsy-commons.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>ai.kognition.pilecv4j</groupId>
        <artifactId>opencv-lib-jar</artifactId>
        <classifier>withlib</classifier>
        <version>${opencv.version}</version>
      </dependency>

      <!-- Internal to the product -->
      <dependency>
        <groupId>ai.kognition.pilecv4j</groupId>
        <artifactId>lib-nr</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>ai.kognition.pilecv4j</groupId>
        <artifactId>lib-image</artifactId>
        <version>${project.version}</version>
      </dependency>

      <!-- the version number for all dependencies in this section
           should all be ${project.version} -->

      <!-- Third party library versions -->
      <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>slf4j-api</artifactId>
        <version>${slf4j.version}</version>
      </dependency>
      <dependency>
        <groupId>junit</groupId>
        <artifactId>junit</artifactId>
        <version>4.12</version>
      </dependency>
      <dependency>
        <groupId>commons-io</groupId>
        <artifactId>commons-io</artifactId>
        <version>2.6</version>
      </dependency>
      
      <!-- Testing -->
      <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>slf4j-log4j12</artifactId>
        <version>${slf4j.version}</version>
        <scope>test</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>
  
  <dependencies>
    <dependency>
      <groupId>ai.kognition.pilecv4j</groupId>
      <artifactId>lib-nr</artifactId>
    </dependency>
    <dependency>
      <groupId>ai.kognition.pilecv4j</groupId>
      <artifactId>lib-image</artifactId>
    </dependency>
    <dependency>
      <groupId>ai.kognition.pilecv4j</groupId>
      <artifactId>opencv-lib-jar</artifactId>
      <classifier>withlib</classifier>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-log4j12</artifactId>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <groupId>net.dempsy</groupId>
      <artifactId>dempsy-utils</artifactId>
    </dependency>
    <dependency>
      <groupId>commons-io</groupId>
      <artifactId>commons-io</artifactId>
    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <repositories>
    <repository>
      <id>maven-eclipse-repo</id>
      <url>http://maven-eclipse.github.io/maven</url>
    </repository>
  </repositories>

  <build>
    <finalName>${artifactId}-${version}</finalName>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
          <debug>true</debug>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-assembly-plugin</artifactId>
        <configuration>
          <descriptors>
            <descriptor>src/main/assembly/descriptor.xml</descriptor>
          </descriptors>
        </configuration>
        <executions>
          <execution>
            <id>make-assembly</id> <!-- this is used for inheritance merges -->
            <phase>package</phase> <!-- append to the packaging phase. -->
            <goals>
              <goal>single</goal> <!-- goals == mojos -->
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
</project>

